# percy-ssr-example

./: .gitignore  README.md  start-wasmedge.sh
app/: Cargo.toml
client/: Cargo.toml  build-wasm.sh
server-wasmedge/: Cargo.toml
server-wasmedge/src/: main.rs
